Se agrega control de sesiones para menu administrador de contenidos

--- a/src/app/components/datosclientes/datosclientes.component.html
+++ b/src/app/components/datosclientes/datosclientes.component.html
@@ -167,7 +167,7 @@
                               <label class="CamposGeneral"><strong>C.P.:</strong></label>
                             </div>
                             <div class="col-sm-4">                     
-                              <label>{{oDatosGenerales.CiudadPoblacion}}</label>
+                              <label>{{oDatosGenerales.CodigoPostal}}</label>
                             </div>     
                           </div>
                           <div class="form-row">
@@ -192,7 +192,7 @@
                               <label class="CamposGeneral"><strong>Telefono:</strong></label>
                             </div> 	
                             <div class="col-sm-4">                     
-                              <label>{{oDatosGenerales.Telefono}}</label>
+                              <label>{{oDatosGenerales.Lada +' '+ oDatosGenerales.Telefono}}</label>
                             </div>     
                           </div> 
                         </div>
