--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -18,11 +18,25 @@
             <form #formAdmin="ngForm"  action="#" class="signin-form">
               <div class="form-group mb-3">
                 <label class="label" for="name" style="color: #183e6f;">Usuario</label>
-                <input type="text" class="form-control"  #usuario="ngModel" [(ngModel)]="ModeloLoginAdmin.usuario" required />
+                <input 
+                  type="text"
+                  class="form-control"
+                  #usuario="ngModel"
+                  [(ngModel)]="ModeloLoginAdmin.usuario"
+                  required />
               </div>
               <div class="form-group mb-3">
                 <label class="label" for="password" style="color: #183e6f;">Contraseña</label>
-                <input type="password" class="form-control" #pass="ngModel" [(ngModel)]="ModeloLoginAdmin.password" required />
+                <input 
+                  type="password" 
+                  class="form-control"
+                  #pass="ngModel" 
+                  [(ngModel)]="ModeloLoginAdmin.password"
+                  required />
+              </div>
+
+              <div *ngIf="alerLoginAdmin">
+                <p class="alert alert-danger" role="alert">{{respuestaLoginAdmin}}</p>
               </div>
               <div class="form-group">
                 <button
@@ -31,6 +45,8 @@
                   class="form-control btn btn-primary rounded submit px-3"
                   style="background-color: #24a4cc"
                 >
+                
+
                 <span *ngIf="bCargandoInicio" class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="color:#e8b4c1"></span>
                   Iniciar sesión
                 </button>
